# google-home-api

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: build.yml  linting.yaml
