[tool.poetry]
name = "google-home-api"
version = "0.1.0"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Typing :: Typed",
]
description = "Python 3 community maintained API"
keywords = [
    "Google Home",
    "Google",
]
include = ["google-home-api/py.typed"]
authors = ["Ilja Leiko <leikoilja@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/leikoilja/google-home-api"
repository = "https://github.com/leikoilja/google-home-api"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.1"
Faker = "^12.3.3"
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"
flake8-comprehensions = "^3.8.0"
flake8-simplify = "^0.17.1"
flake8-use-fstring = "^1.3"
ipdb = "^0.13.7"
isort = "^5.10.1"
mock = "^4.0.3"
mypy = "^0.931"
pre-commit = "^2.17.0"
pylint = "^2.12.2"
pytest = "^7.0.1"
codespell = "^2.1.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/leikoilja/google-home-api/issues"
"Release Notes" = "https://github.com/leikoilja/google-home-api/releases"

[tool.pylint.format]
max-line-length = 88
min-similarity-lines = 7

[tool.isort]
profile = "black"
force_sort_within_sections = true
combine_as_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
